crates/nash-solve/tests/snapshots/inference__keyword_expressions_reject_wrong_message_and_condition_types-3.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\nunitValue : unit\nunitValue = ()\nvalue = fail unitValue\n"
info: diagnostic
---
nash::type::mismatch

  × Type mismatch: expected `string`, found `unit`.
   ╭─[Main.nash:4:14]
 3 │ unitValue = ()
 4 │ value = fail unitValue
   ·              ────┬────
   ·                  ╰── `unitValue`
   ╰────
