crates/nash-solve/tests/snapshots/inference__keyword_expressions_reject_wrong_message_and_condition_types-4.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\nvalue = todo ()\n"
info: diagnostic
---
nash::type::mismatch

  × Type mismatch: expected `string`, found `unit`.
   ╭─[Main.nash:2:14]
 1 │ module Main exposing (..)
 2 │ value = todo ()
   ·              ─┬
   ·               ╰── unit
   ╰────
