crates/nash-solve/tests/snapshots/inference__keyword_expressions_reject_wrong_message_and_condition_types.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\nunitValue : unit\nunitValue = ()\nvalue = assert unitValue\n"
info: diagnostic
---
nash::type::mismatch

  × Type mismatch: expected `bool`, found `unit`.
   ╭─[Main.nash:4:16]
 3 │ unitValue = ()
 4 │ value = assert unitValue
   ·                ────┬────
   ·                    ╰── `unitValue`
   ╰────
  help: Use an explicit comparison to produce a `bool`.
