crates/nash-solve/tests/snapshots/inference__kind_bound_is_enforced_at_an_inferred_call_site.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (..)\nimport Builtin exposing (..)\ntype option 'a = None | Some 'a\nfirst : 'a -> list 'a -> 'a\nfirst x xs = x\nbad xs = first (Some ()) xs\n"
---
[
    BadKind {
        region: Region {
            start: Position {
                line: 6,
                column: 10,
            },
            end: Position {
                line: 6,
                column: 15,
            },
        },
        name: "first",
        args: [
            Type {
                home: ModuleName {
                    package: None,
                    name: "Main",
                },
                name: "option",
                args: [
                    Unit,
                ],
            },
        ],
        reason: Mismatch {
            expected: KindScheme {
                bounds: [
                    KindSet(
                        3,
                    ),
                ],
                kind: Var(
                    0,
                ),
            },
            actual: KindScheme {
                bounds: [],
                kind: Base(
                    Term,
                ),
            },
        },
    },
]
