crates/nash-solve/tests/snapshots/inference__labeled_ctor_big_multi_access_error.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (..)\ntype Redeemer = Claim { owner : Bytes } | Cancel { owner : Bytes }\nwho : Redeemer -> Bytes\nwho r = r.owner\n"
---
[
    NotARecord {
        region: Region {
            start: Position {
                line: 4,
                column: 9,
            },
            end: Position {
                line: 4,
                column: 16,
            },
        },
        context: Access {
            record_region: Region {
                start: Position {
                    line: 4,
                    column: 9,
                },
                end: Position {
                    line: 4,
                    column: 10,
                },
            },
            maybe_name: Some(
                "r",
            ),
        },
        field: Some(
            "owner",
        ),
        record: Type {
            home: ModuleName {
                package: None,
                name: "Main",
            },
            name: "Redeemer",
            args: [],
        },
    },
]
