crates/nash-solve/tests/snapshots/inference__labeled_ctor_captured_projection_keeps_outer_parameter.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (..)\ntype box 'a = Box { value : 'a }\nbad : box 'a -> ('a, unit)\nbad b =\n    let\n        get ignored = b.value\n    in\n    (get (), get ())\n"
---
[
    BadExpr(
        Region {
            start: Position {
                line: 8,
                column: 5,
            },
            end: Position {
                line: 8,
                column: 21,
            },
        },
        Tuple,
        Tuple(
            RigidVar(
                "a",
            ),
            RigidVar(
                "a",
            ),
            [],
        ),
        FromAnnotation(
            "bad",
            Region {
                start: Position {
                    line: 3,
                    column: 7,
                },
                end: Position {
                    line: 3,
                    column: 27,
                },
            },
            1,
            TypedBody,
            Tuple(
                RigidVar(
                    "a",
                ),
                Type {
                    home: ModuleName {
                        package: Some(
                            PackageName {
                                author: "nash",
                                project: "core",
                            },
                        ),
                        name: "Builtin",
                    },
                    name: "unit",
                    args: [],
                },
                [],
            ),
        ),
    ),
]
